Fix illegible homepage blue blocks on IE11

--- a/front/style/_cards.scss
+++ b/front/style/_cards.scss
@@ -547,7 +547,6 @@
     }
 
     .box {
-        align-items: baseline;
         background: white;
         border-radius: 4px;
         display: flex;
@@ -562,6 +561,10 @@
         h2,
         p {
             white-space: normal;
+        }
+
+        .btn {
+            align-self: flex-start;
         }
     }
 }
